Fixed: wflow-consoleweb - Userview Theme - Inconsistent card layout style for old and new theme. @8.0-SNAPSHOT Fixed: wflow-consoleweb - Datalist - Card layout does not having consistent gap between card. @8.0-SNAPSHOT Fixed: wflow-consoleweb - Ajax Userview Theme - Style does not minified. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/datalist8.css
+++ b/wflow-consoleweb/src/main/webapp/css/datalist8.css
@@ -252,121 +252,9 @@ body.rtl .dataList span.pagelinks{
     vertical-align: baseline;
     margin-bottom: 0px !important;
 }
-.card_layout_body_cell {
-    display:none;
-}
-.card-layout.card-layout-active.no_action .select_checkbox,
-.card-layout.card-layout-active.no_action .checkbox_checkbox{
-    display:none;
-}
-.card-layout.card-layout-active table tbody {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-.card-layout.card-layout-active table,
-.card-layout.card-layout-active table td:not(.column-hidden),
-.card-layout.card-layout-active table th:not(.column-hidden),
-.card-layout.card-layout-active table td.card-action{
-    display: block;
-    border:0 !important;
-}
-.card-layout.card-layout-active table td.card-action a{
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left:0;
-    right:0;
-    bottom:0;
-    z-index: 1;
-}
-.card-layout.card-layout-active table td.rowaction_body {
-    position: relative;
-    z-index: 2;
-}
-body.is-dragging .card-layout.card-layout-active table td[data-cbuilder-dragelement] {
-    border-top: 1px dashed #4285f4 !important;
-    border-bottom: 1px dashed #4285f4 !important;
-    border-right: 1px dashed #4285f4 !important;
-    border-left: 1px dashed #4285f4 !important;
-}
-.card-layout.card-layout-active tr.odd,
-.card-layout.card-layout-active tr.even{
-    background-color: transparent;
-}
-.card-layout.card-layout-active tr{
-    display: block;
-    border:1px solid rgba(0,0,0,.125);
-    border-radius: .25rem;
-    padding: 15px 10px;
-    width: calc(25% - 20px);
-    margin: 10px;
-    box-sizing: border-box;
-    position: relative;
-}
-.card-layout.card-layout-active tr.empty{
-    width: 100%;
-}
-.card-layout.card-layout-active tr td.gap,
-.card-layout.card-layout-active thead{
-    display: none !important;
-}
-.card-layout.card-layout-active td {
-    padding: 2px 10px 0;
-}
-.card-layout.card-layout-active td.row_action{
-    display: inline-block;
-    padding: 0;
-}
-.card-layout.card-layout-active .rowaction_body{
-    margin-top: 10px;
-    margin-left: 5px;
-}
-.card-layout.card-layout-active .nesteddl_row:not(.active){
-    display: none;
-}
-.card-layout.card-layout-active.card-label td {
-    padding: 0;
-}
-.card-layout.card-layout-active.card-label td.card_layout_body_cell {
-    display:block;
-    position: relative;
-}
-.card-layout.card-layout-active.card-label table tbody tr td.column_body {
-    display:none !important;
-}
-.card-layout.card-layout-active.card-label .column_header{
-    font-weight: bold;
-}
-.card-layout.card-layout-active.card-label .column_header:not(:empty):after{
-    content: " :";
-}
-.card-layout.card-layout-active.card-label .column_body {
-    margin-bottom: 5px;
-}
-.card-layout.card-layout-active .exportlinks{
-    display:none;
-}
 .footable-buttons:after{
     content: "";
     display: block;
     clear: both;
     float: none;
-}
-@media (max-width: 991px) {
-    .card-layout.card-layout-active tr{
-        width: calc(33.3332% - 20px);
-    }
-    .card-layout.card-layout-active.card-label table tbody tr td.column_body {
-        display:none !important;
-    }
-}
-@media (max-width: 767px) {
-    .card-layout.card-layout-active tr{
-        width: 100%;
-        margin: 10px 0;
-    }
-    .card-layout.card-layout-active.card-label table tbody tr td.column_body {
-        display:none !important;
-    }
 }
